--- a/package.json
+++ b/package.json
@@ -7,18 +7,15 @@
   },
   "dependencies": {
     "bootstrap": "^4.3.1",
-    "cookie-parser": "~1.4.4",
-    "debug": "~4.1.1",
     "eslint": "^6.1.0",
     "eslint-config-google": "^0.13.0",
     "express": "~4.17.1",
+    "fs-extra": "^8.1.0",
     "http-errors": "~1.7.3",
     "jquery": "^3.4.1",
-    "morgan": "~1.9.1",
     "mustache": "^3.0.1",
     "node-sass-middleware": "0.11.0",
     "pug": "2.0.4",
-    "serve-favicon": "^2.5.0",
-    "shortid": "^2.2.14"
+    "serve-favicon": "^2.5.0"
   }
 }
